# mbta-performance

./: .coverage  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: deploy.yml  layer.yml  lint.yml  test.yml
devops/: deploy.sh  helpers.sh
docs/: architecture.md  configuration.md  data-products.md  data-sources.md  deployment.md  index.md
docs/api/: date.md  gtfs.md  parallel.md  s3.md
docs/api/historic/: arcgis.md  download.md  process.md
docs/api/historic/backfill/: bus.md  ferry.md  main.md
docs/api/lamp/: backfill.md  ingest.md
mbta-performance/: app.py
mbta-performance/.chalice/: config.json  policy-bus-lamp-ingest.json  policy-lamp-ingest.json  policy-tm-benchmarks.json  resources.json
mbta-performance/chalicelib/: date.py  gtfs.py  parallel.py  s3.py
mbta-performance/chalicelib/benchmarks/: __init__.py  tm_benchmarks.py
mbta-performance/chalicelib/historic/: README.md  arcgis.py  constants.py  download.py  gtfs_archive.py  process.py
mbta-performance/chalicelib/historic/backfill/: bus.py  ferry.py  main.py
mbta-performance/chalicelib/historic/tests/: test_arcgis.py  test_download.py  test_gtfs_archive.py  test_process.py
mbta-performance/chalicelib/lamp/: __init__.py  bus_constants.py  bus_ingest.py  constants.py  date.py  ingest.py
mbta-performance/chalicelib/lamp/backfill/: bus.py  main.py
mbta-performance/chalicelib/lamp/tests/: test_bus_ingest.py  test_date.py  test_ingest.py
mbta-performance/chalicelib/lamp/tests/sample_data/: 2024-02-07-10ksample.parquet  2024-02-07-subway-on-time-performance-v1.parquet  2024-02-07_gtfs.csv  bus-20260407-sample.parquet
mbta-performance/chalicelib/tests/: test_date.py  test_gtfs.py  test_parallel.py  test_s3.py
