[project]
name = "mbta-performance"
version = "0.1.0"
description = "Processing of static MBTA performance data"
authors = [{ name = "TransitMatters Labs Team" }]
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "requests>=2.32.3,<3",
    "boto3~=1.34.162",
    "datadog_lambda==6.109.0",
    "pyarrow~=21.0.0",
    "mbta-gtfs-sqlite~=1.1.1",
    "fireducks~=1.4.3",
]

[dependency-groups]
dev = [
    "chalice==1.32.0",
    "ruff>=0.14.3",
    "pytest~=8.3.5",
    "pre-commit>=4.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
