[project]
name = "mbta-performance"
version = "0.1.0"
description = "Processing of static MBTA performance data"
authors = [{ name = "TransitMatters Labs Team" }]
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "requests>=2.32.3,<3",
    "boto3~=1.34.162",
    "pandas~=2.2.3",
    "datadog_lambda==6.109.0",
    "pyarrow~=17.0.0",
    "mbta-gtfs-sqlite~=1.1.1",
]

[dependency-groups]
dev = [
    "chalice==1.32.0",
    "ruff>=0.14.4",
    "pytest~=9.0.1",
    "pre-commit>=4.4.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py312']
